# layman

./: .gitattributes  .gitignore  Cargo.toml  EXAMPLES.md  GRAMMAR.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  verify.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/evaluator/: mod.rs
src/lexer/: mod.rs
src/lpm/: commands.rs  fetch.rs  lockfile.rs  manifest.rs  mod.rs  resolution.rs
src/parser/: mod.rs
src/resolver/: mod.rs
src/stdlib/: io.rs  string.rs
src/typechecker/: mod.rs
src/types/: mod.rs
src/utils/: mod.rs
std/: collections.lay  io.lay  math.lay  string.lay
test-cases/basics/: README.md  debug_hello.lay  hello_test.lay  short_hello.lay  test_038.lay  test_066.lay  test_numbers.lay  test_numbers.lay.expected.actual
test-cases/concurrency/: README.md  test_async.lay  test_parallel.lay
test-cases/control-flow/: README.md  test_012.lay  test_022.lay  test_028.lay  test_028.lay.expected  test_035.lay  test_035.lay.expected  test_054.lay  test_056.lay  test_056.lay.expected  test_057.lay  test_058.lay  test_062.lay  test_062.lay.expected  test_063.lay  test_063.lay.expected  test_065.lay  test_068.lay  test_068.lay.expected  test_074.lay  test_079.lay  test_080.lay  test_080.lay.expected  test_081.lay  test_096.lay  test_163.lay  test_164.lay
test-cases/data-structures/: README.md  test_003.lay  test_003.lay.expected  test_005.lay  test_005.lay.expected  test_006.lay  test_006.lay.expected  test_007.lay  test_008.lay  test_023.lay  (+41 more)
tests/: lpm_integration.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+360 files in other folders)
