[package]
name = "layman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "layman"
path = "src/main.rs"

[lib]
name = "layman_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.7"
indexmap = "2.2.0"

[dev-dependencies]
insta = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
